RESOLVED FIXED71847
JSC::Parser::Parser leaks Lexer member
https://bugs.webkit.org/show_bug.cgi?id=71847
Summary JSC::Parser::Parser leaks Lexer member
Michael Saboff
Reported 2011-11-08 12:22:40 PST
<rdar://problem/10400054> Leaks in JSC::Parser::Parser
Attachments
Patch (2.33 KB, patch)
2011-11-08 12:27 PST, Michael Saboff
oliver: review+
Michael Saboff
Comment 1 2011-11-08 12:27:06 PST
Michael Saboff
Comment 2 2011-11-08 12:47:20 PST
Note You need to log in before you can comment on or make changes to this bug.