JSC::Parser::Parser leaks Lexer member https://bugs.webkit.org/show_bug.cgi?id=71847

Changed m_lexer member of Parser to be OwnPtr to fix a memory leak.

Reviewed by Oliver Hunt.

* parser/Parser.cpp:
(JSC::Parser::Parser):
(JSC::Parser::parseFunctionBody):
* parser/Parser.h:


Canonical link: https://commits.webkit.org/88175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99608 268f45cc-cd09-0410-ab3c-d52691b4dbfc